# MPEG-G-Microbiome-Classification-Challenge

./: .gitignore  README.md
centralised_modelling/: README.md  basic_stats_modelling.ipynb  main.py  pyproject.toml
centralised_modelling/Subs/: xgb_submission_10_folds_0_02154.csv
data_prep/: README.md  decompressing_mgb_files.ipynb  prepare_data_multiprocessing.py  pyproject.toml
data_prep/Data/: decompressing_mgb_files.ipynb
federated_modelling/: README.md  client.py  data_preparation.py  inference.py  main.py  pyproject.toml  server.py  start_federation.sh  task.py
federated_modelling/Models/: final_global_model_500_5_bagging_gkf.json
federated_modelling/Subs/: final_global_model_500_5_bagging_gkf.csv
